Csv -> CSV on backend views as well

--- a/app/views/tasks/biological_associations/dwc_extension_preview/index.html.erb
+++ b/app/views/tasks/biological_associations/dwc_extension_preview/index.html.erb
@@ -10,7 +10,7 @@
 <table id="preview_table" class="tablesorter">
   <thead>
     <%= tag.tr(
-      Export::Csv::Dwc::Extension::BiologicalAssociations::HEADERS.collect{|c| fancy_th_tag(name: c)}.join.html_safe
+      Export::CSV::Dwc::Extension::BiologicalAssociations::HEADERS.collect{|c| fancy_th_tag(name: c)}.join.html_safe
     ) %>
   </thead>
 
