--- a/app/views/tasks/biological_associations/summary/index.html.erb
+++ b/app/views/tasks/biological_associations/summary/index.html.erb
@@ -37,12 +37,13 @@
 <% n = ::Queries::TaxonName::Filter.new(biological_association_query: @biological_associations_query.params, ancestrify: true).all %>
 <% m = ::Queries::TaxonName::Filter.new(biological_association_query: @biological_associations_query.params).all %>
 
-<%= n.collect{|z| z.cached}.join('; ') %>
-
 <ul>
-  <li> <b> Bold means a record is linked directly to that taxon. </b> </li>
   <li> <%= m.count %> taxon names referenced </li>
+  <li> <b> Bold means a record is linked directly to that taxon. </b> </li>
+  <li> <em> Fully formed species names under a genus represent verbatim names used in Combinations. </em> </li>
 </ul>
+
+<hr/>
 
 <%= simple_hierarchy_tag(n, m) -%>
 
