--- a/app/views/biocuration_classifications/_form.html.erb
+++ b/app/views/biocuration_classifications/_form.html.erb
@@ -6,8 +6,12 @@
     <%= f.number_field :biocuration_class_id %>
   </div>
   <div class="field">
-    <%= f.label :biological_collection_object_id %><br>
-    <%= f.number_field :biological_collection_object_id %>
+    <%= f.label :biocuration_classification_object_id %><br>
+    <%= f.number_field :biocuration_classification_object_id %>
+  </div>
+  <div class="field">
+    <%= f.label :biocuration_classification_object_type %><br>
+    <%= f.number_field :biocuration_classification_object_type %>
   </div>
   <div class="actions">
     <%= f.submit %>
