--- a/app/views/sequences/batch_file_load/genbank/_batch_file_load.html.erb
+++ b/app/views/sequences/batch_file_load/genbank/_batch_file_load.html.erb
@@ -8,7 +8,7 @@
       <p>Creates sequences and origin relationships and attaches at most 2 identifiers to each sequence</p>
       <ul>
         <li>A tab-delimited, UTF-8 compatible text file is required.</li>
-        <li>Sample file (see <%= link_to('&iSEQID00000349_&vDRMDNA4144_&g28S_&pPUB003_&nLionepha_chintimini_OR_4144.fas', asset_path('batch_file_load_templates/sequences/sequences_genbank_batch_load.tab'), target: '_blank') -%>).</li>
+        <li>Sample file (see <%= link_to('&iSEQID00000349_&vDRMDNA4144_&g28S_&pPUB003_&nLionepha_chintimini_OR_4144.fas', asset_path('batch_file_load_templates/sequences/sequences_genbank_batch_load.tab', skip_pipeline: true), target: '_blank') -%>).</li>
         <li>Multiple uploads of the same data will fail.</li>
         <li>Assumes a namespace with name "DRMSequenceId" and shortname "DRMSEQID" exists</li>
         <li>Assumes filename has information about sequence</li>
